feat: Text-based filtering achieved. Still can't figure out how to pull a user's combat level. Thanks for nothing, RuneLite Doc.

--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -1,5 +1,5 @@
-displayName=Example
-author=Nobody
-description=An example greeter plugin
+displayName=Better Spam Filter
+author=Jestzer
+description=Filter out spam messages better.
 tags=
 plugins=com.example.ExamplePlugin
