chore: Renaming appropriately to the project.

--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -2,4 +2,4 @@ displayName=Better Spam Filter
 author=Jestzer
 description=Filter out spam messages better.
 tags=
-plugins=com.example.ExamplePlugin
+plugins=com.betterspamfilter.BetterSpamFilter
